<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:id="@+id/editText_task_title"
        android:hint="@string/task_title"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:inputType="date"
            android:hint="@string/task_date"
            android:ems="8"
            android:id="@+id/editText_task_date" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/at_symbol"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/task_time"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:inputType="date"
            android:ems="8"
            android:id="@+id/editText_task_time" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:inputType="textMultiLine"
        android:id="@+id/editText_task_desc"
        android:hint="@string/task_desc"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText_task_remind_me"
            android:text="@string/task_remind_me"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1.5"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:id="@+id/switch_remind_me"
            />
    </LinearLayout>
    <!--<Spinner-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:entries="@array/tag_names"-->
        <!--android:id="@+id/spinner_add_tag"-->
        <!--android:layout_marginTop="10dp" />-->

    <!--<Spinner-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:entries="@array/user_names"-->
        <!--android:id="@+id/spinner_add_user"-->
        <!--android:layout_marginTop="10dp"-->
       <!--/>-->
</LinearLayout>